[feat] - add service worker support

--- a/index.template.html
+++ b/index.template.html
@@ -10,7 +10,15 @@
     <link rel="manifest" href="/manifest.json">
   </head>
   <body>
-    fsdafad 
     <!--vue-ssr-outlet-->
+    <script>
+      if(navigator && navigator.serviceWorker) {
+        navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
+            console.log(registration)
+        }).catch(function (err) {
+            console.log(err)
+        })
+      }
+      </script>
   </body>
 </html>
